# send_surgi_invoice

./: INSTALLATION.md  README.md  apps.txt  pyproject.toml  setup.py
send_surgi_invoice/: fixtures.py  hooks.py  tasks.py
send_surgi_invoice/events/: sales_invoice
