[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "send_surgi_invoice"
version = "0.0.1"
description = "Automate Sales Invoice"
authors = [
  { name="SurgiShop", email="gary.starr@surgishop.com" }
]
dependencies = [
  "frappe>=15"
]
readme = "README.md"
license = { text = "MIT" }
